# rocon_msgs

./: .travis.yml  stack.xml
appmanager_comms/: mainpage.dox  manifest.xml
appmanager_comms/msg/: App.msg  AppDescription.msg
appmanager_comms/srv/: GetAppList.srv  StartApp.srv
appmanager_msgs/: .project  .pydevproject  CMakeLists.txt  manifest.xml  package.xml
appmanager_msgs/msg/: PlatformInfo.msg
appmanager_msgs/srv/: StartApp.srv  StopApp.srv
cafe_msgs/: CMakeLists.txt  package.xml
cafe_msgs/action/: UserOrder.action
cafe_msgs/msg/: Menu.msg  Order.msg  Status.msg
concert_comms/: .gitignore  CMakeLists.txt  manifest.xml
concert_comms/msg/: ConcertClient.msg  ConcertClients.msg  DeviceConfiguration.msg
concert_comms/srv/: Implementation.srv
concert_msgs/: .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
concert_msgs/msg/: CancelResources.msg  ClientList.msg  ConcertClient.msg  ConcertClientState.msg  ConcertClients.msg  ConcertInfo.msg  ConcertService.msg  ConcertServices.msg  ConductorGraph.msg  Constants.msg  Device.msg  DeviceConfiguration.msg  ErrorCodes.msg  InteractiveClient.msg  InteractiveClients.msg  LinkConnection.msg  LinkEdge.msg  LinkGraph.msg  LinkNode.msg  ListRoconService.msg  PlatformInfo.msg  RemoconApp.msg  RemoconStatus.msg  RequestResources.msg  RoleAppList.msg  ServiceProfile.msg  ServiceResourcePair.msg  SoftwareInstance.msg  SoftwareProfile.msg  Softwares.msg  Strings.msg
concert_msgs/srv/: AddConcertService.srv  AddRoconService.srv  AllocateSoftware.srv  BatchInvite.srv  EnableConcertService.srv  EnableService.srv  GetApp.srv  GetPlatformInfo.srv  GetRolesAndApps.srv  Implementation.srv  Invitation.srv  LockConcertClients.srv  RemoveConcertService.srv  RequestInteraction.srv  ResourceStatus.srv  SetAutoInvite.srv  SetInteractions.srv  SetRolesAndApps.srv  StartSolution.srv  Status.srv
concert_service_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
concert_service_msgs/pairs/: CaptureTeleop.pair
concert_workflow_engine_msgs/: CHANGELOG.rst  package.xml
concert_workflow_engine_msgs/msg/: Workflow.msg  WorkflowsStatus.msg
demo_msgs/: .gitignore  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
demo_msgs/msg/: Command.msg  Goto.msg  ListTasks.msg  Order.msg  ReleaseRobot.msg  ResponseDrink.msg  ResponseGoto.msg
gateway_comms/: .cproject  .project  mainpage.dox  manifest.xml
gateway_comms/msg/: Connection.msg  FlipRule.msg  Gateway.msg  Interface.msg  PublicInterface.msg  PublicRule.msg  RemoteGateway.msg  Result.msg  Rule.msg
gateway_comms/srv/: Advertise.srv  AdvertiseAll.srv  ConnectHub.srv  Flip.srv  FlipPatterns.srv  GatewayInfo.srv  ListPublicInterfaces.srv  PublicHandler.srv  Pull.srv  PullAll.srv  Remote.srv  RemoteAll.srv  RemoteGatewayInfo.srv  RemoteRequest.srv
gateway_msgs/: .cproject  .gitignore  .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
gateway_msgs/msg/: ConnectionStatistics.msg  ErrorCodes.msg  GatewayInfo.msg  RemoteGateway.msg  RemoteRuleWithStatus.msg
gateway_msgs/srv/: GatewayInfo.srv
rocon_annotation_msgs/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_annotation_msgs/srv/: DeleteAnnotations.srv  PublishAnnotations.srv  RenameAnnotations.srv  SaveAnnotations.srv  SaveColumns.srv  SaveMarkers.srv  SaveTables.srv  SaveWalls.srv
rocon_app_manager_msgs/: .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_app_manager_msgs/msg/: App.msg  AppList.msg  Constants.msg  ErrorCodes.msg  IncompatibleAppList.msg  PairingClient.msg  PlatformInfo.msg  Rapp.msg  RappList.msg  Status.msg
rocon_app_manager_msgs/srv/: FlipRequest.srv  GetStatus.srv  Invite.srv  RemoteControl.srv  StartApp.srv  StartRapp.srv  Status.srv
rocon_demo_msgs/: .gitignore  .project  .pydevproject  CMakeLists.txt  package.xml
rocon_demo_msgs/msg/: RequestDrink.msg  RequestGoto.msg  RequestMoveRobot.msg  ResponseRobot.msg  Task.msg
rocon_device_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_device_msgs/msg/: Device.msg  Hue.msg  HueArray.msg  HueState.msg  SetColor.msg
rocon_interaction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_interaction_msgs/msg/: ErrorCodes.msg  Interaction.msg  InteractionsUpdate.msg  InteractiveClient.msg  InteractiveClients.msg  Pair.msg  Pairing.msg  PairingStatus.msg  RemoconStatus.msg  Requirement.msg  Strings.msg
rocon_interaction_msgs/srv/: GetInteractions.srv  GetRoles.srv  RequestInteraction.srv
rocon_msgs/: CHANGELOG.rst  package.xml
rocon_service_msgs/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_service_msgs/pairs/: CaptureTeleop.pair
rocon_service_msgs/srv/: SpawnTurtle.srv
rocon_service_pair_msgs/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_service_pair_msgs/cmake/: rocon_service_pair_msgs-extras.cmake.em
rocon_service_pair_msgs/msg/: Empty.msg  Readme.md
rocon_service_pair_msgs/scripts/: genpair.py
rocon_std_msgs/: .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_std_msgs/msg/: Connection.msg  ConnectionCacheSpin.msg  MasterInfo.msg  PlatformInfo.msg  PlatformTuple.msg  Strings.msg
rocon_std_msgs/srv/: GetPlatformInfo.srv
rocon_tutorial_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_tutorial_msgs/pairs/: KillTurtle.pair
rocon_tutorial_msgs/srv/: KillTurtle.srv
scheduler_msgs/: .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
scheduler_msgs/action/: RequestResources.action
scheduler_msgs/msg/: AllocateResources.msg  CurrentStatus.msg  Request.msg  Resource.msg  ResourceStatus.msg  SchedulerFeedback.msg  SchedulerRequests.msg
scheduler_msgs/srv/: ReleaseResouces.srv
