<package>
  <name>appmanager_msgs</name>
  <version>0.2.0</version>
  <description>
    Messages used by the platform app manager.    
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/appmanager_msgs</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_msgs</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_msgs/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>