<package>
  <name>gateway_msgs</name>
  <version>0.5.1</version>
  <description>
    Messages used by the gateway model.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/gateway_msgs</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_msgs</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_msgs/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
