##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rocon_annotation_msgs)

##############################################################################
# Dependencies
##############################################################################

find_package(catkin REQUIRED COMPONENTS 
    message_generation
)

##############################################################################
# Messgaes
##############################################################################

add_message_files(
  DIRECTORY msg
  FILES
  MapListEntry.msg
)

generate_messages(DEPENDENCIES)

##############################################################################
# Package
##############################################################################

catkin_package(CATKIN_DEPENDS message_runtime)
