<package>
  <name>rocon_annotation_msgs</name>
  <version>0.7.0</version>
  <description>
    Messages used by the rocon_annotations suite.
  </description>

  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/rocon_annotation_msgs</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_msgs</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_msgs/issues</url>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <author>Jorge Santos</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
