<?xml version="1.0"?>
<package>
  <name>rocon_msgs</name>
  <version>0.5.1</version>
  <description>
    Communication types (msgs/srvs/actions) for robotics in concert (aka multimaster).    
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_msgs</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_msgs</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_msgs/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>gateway_msgs</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

